# homegear-influxdb

./: .gitignore  CMakeLists.txt  LICENSE  configure.ac  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  preinst  prerm  rules
misc/Config Directory/: influxdb.conf
misc/System Config/: homegear-history.service  homegear-influxdb.init  homegear-influxdb.service  logrotate
src/: Database.cpp  Database.h  IpcClient.cpp  IpcClient.h  Makefile.am  Settings.cpp  Settings.h  homegear-influxdb  main.cpp
src/GD/: GD.cpp  GD.h
